# pynfce

./: .gitignore  .travis.yml  README.rst  pyproject.toml
pynfce/: __init__.py
pynfce/extraction/: emitente.py  nfe.py  produtos.py  states.py  util.py  xpath.py
pynfce/nfce/: nfce.py
pynfce/states/: ba.py  crawling.py  states.py
tests/: mocks.py  test_pynfce.py  util.py
tests/mock_data/: emitente_mock.html  nfe_mock.html
