[tool.poetry]
name = "pynfce"
version = "0.1.0"
description = ""
authors = ["Matheus Cardoso <matheus.mcas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
requests_file = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
