[tool.poetry]
name = "pynfce"
version = "0.3.1"
description = ""
authors = ["Matheus Cardoso <matheus.mcas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests-html = "^0.10.0"
lxml_html_clean = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
requests_file = "^1.4"
mock = "^2.0"
codecov = "^2.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
